Fix the algorithm of the calculation of the Shift+Gesture scale

Now it takes the screen size into account

BUG:366619