libs/ui/tool/kis_tool_freehand.cc
@@ -26,6 +26,8 @@
 #include <QPainter>
 #include <QRect>
 #include <QThreadPool>
+#include <QApplication>
+#include <QDesktopWidget>
 
 #include <kis_icon.h>
 #include <KoPointerEvent.h>
@@ -340,24 +342,30 @@ void KisToolFreehand::continueAlternateAction(KoPointerEvent *event, AlternateAc
 
     QPointF offset = actualWidgetPosition - lastWidgetPosition;
 
-    /**
-     * view pixels != widget pixels, but we do this anyway, we only
-     * need to scale the gesture down, not rotate or anything
-     */
-    QPointF scaledOffset = canvas()->viewConverter()->viewToDocument(offset);
+    KisCanvas2 *canvas2 = dynamic_cast<KisCanvas2 *>(canvas());
+    QRect screenRect = QApplication::desktop()->screenGeometry();
 
-    if (qRound(scaledOffset.x()) != 0) {
+    qreal scaleX = 0;
+    qreal scaleY = 0;
+    canvas2->coordinatesConverter()->imageScale(&scaleX, &scaleY);
+
+    // we have no centralized knowledge of the maximum brush size!
+    const qreal maxBrushSize = 1000.0;
+    const qreal effectiveMaxDragSize = 0.5 * screenRect.width();
+    const qreal effectiveMaxBrushSize = qMin(maxBrushSize, effectiveMaxDragSize / scaleX);
+
+    const qreal scaleCoeff = effectiveMaxBrushSize / effectiveMaxDragSize;
+    const qreal sizeDiff = scaleCoeff * offset.x() ;
+
+    if (qAbs(sizeDiff) > 0.01) {
         KisPaintOpSettingsSP settings = currentPaintOpPreset()->settings();
-        const qreal newSize = m_lastPaintOpSize + scaledOffset.x();
+        const qreal newSize = qBound(0.01, m_lastPaintOpSize + sizeDiff, maxBrushSize);
+
         settings->setPaintOpSize(newSize);
         requestUpdateOutline(m_initialGestureDocPoint, 0);
 
         m_lastDocumentPoint = event->point;
-        /**
-         * We re-request the size from the paintop itself, because
-         * the size might be cropped by some internals of a brush
-         */
-        m_lastPaintOpSize = currentPaintOpPreset()->settings()->paintOpSize();
+        m_lastPaintOpSize = newSize;
     }
 }
 
